RESOLVED FIXED111868
REGRESSION(r145000): Crash loading arstechnica.com when Safari Web Inspector is open
https://bugs.webkit.org/show_bug.cgi?id=111868
Summary REGRESSION(r145000): Crash loading arstechnica.com when Safari Web Inspector ...
BJ Homer
Reported 2013-03-08 10:10:46 PST
Created attachment 192247 [details] Crash log If I have the nightly Safari Web Inspector open and navigate to http://arstechnica.com, Safari crashes. Crash log attached.
Attachments
Crash log (55.75 KB, text/plain)
2013-03-08 10:10 PST, BJ Homer
no flags
Radar WebKit Bug Importer
Comment 1 2013-03-08 10:11:21 PST
Timothy Hatcher
Comment 2 2013-03-08 10:18:16 PST
Crash is in JSC.
Andreas Kling
Comment 3 2013-03-09 13:00:52 PST
BJ Homer
Comment 4 2013-03-11 20:46:30 PDT
Note: This seems to only happen if the Style inspector is shown.
Oliver Hunt
Comment 5 2013-03-14 17:47:34 PDT
Note You need to log in before you can comment on or make changes to this bug.