REGRESSION(r145000): Crash loading arstechnica.com when Safari Web Inspector is open https://bugs.webkit.org/show_bug.cgi?id=111868

Reviewed by Antti Koivisto.

Don't allow non-local property lookup when the debugger is enabled.

* bytecompiler/BytecodeGenerator.cpp:
(JSC::BytecodeGenerator::resolve):

Canonical link: https://commits.webkit.org/130697@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145860 268f45cc-cd09-0410-ab3c-d52691b4dbfc